# planKapkan

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
rust-tdlib/src/types/: set_tdlib_parameters.rs  text_entity_type.rs  update.rs  user_full_info.rs
src/: main.rs
tdlib/: tdjson.exp  tdjson.lib
